# conan-static-linking-experiments

./: CMakeLists.txt  README.md  conanfile.py
src/: main.cpp
